# EEL7323-Programacao-C-para-Sistemas-Embarcados

./: .gitignore  CMakeLists.txt  README.md  blink.c  main.c  pico_sdk_import.cmake  raspberry_pi_pico_links  readme_gcc.txt  tutorial_raspberry
Exercícios/Aula 1/: questao_2.cpp  questao_3.cpp  questao_4.cpp  questao_6_b.cpp
Exercícios/Aula 2/Classe_SystemUser/: SystemUser.cpp  SystemUser.h  test_SystemUser.cpp
Exercícios/Aula 2/pasta_modelo/: Classe.cpp  Classe.h
Exercícios/Aula 2/questao_1/: Calculadora.cpp
Exercícios/Aula 2/questao_3/: Calculadora.cpp  Calculadora.h
Exercícios/Aula 2/questao_4/: Cadastro_pessoa.cpp  tb_Cadastro_pessoa.cpp
Exercícios/Aula 2/questao_5/: Cadastro_pessoa.cpp  Cadastro_pessoa.h  Data_nascimento.h  (+2 more)
Exercícios/Aula 4/: Calendar.cpp  Calendar.h  Clock.cpp  ClockCalendar.cpp  ClockCalendar.h  main_ClockCalendar.cpp
Exercícios/Aula 5/: Vetor.h  main.cpp
Exercícios/Prontos/: Clock.cpp  leonardo.cpp  testeClock.cpp
Exercícios/Trabalho/: Calendar.cpp  Calendar.h  Clock.cpp  ClockCalendar.cpp  ClockCalendar.h  Polimorfismo.cpp  Pressao.h  Sensor.h  Temperatura.cpp  Temperatura.h  cadastro_Temperatura.cpp  cadastro_Temperatura.h  class_Sensor.h  main_sensores.cpp
Projeto/: CMakeLists.txt  Calendar.cpp  Clock.cpp  ClockCalendar.cpp  ClockCalendar.h  Controle.cpp  Controle.h  List.cpp  List.h  List_temp_fixa.cpp  Node.cpp  Node.h  Node_temp_fixa.cpp  Sensor_Temperatura_DHT11.cpp  dhc.c  interface_PC.cpp  main.cpp  main_ClockCalendar.cpp  main_List_2.cpp  ondeparei.md  ondeparei.txt  sobrecarga.cpp  tempCodeRunnerFile.cpp  test.c  testeClock.cpp
Projeto-Pico-ar-condicionado/: CMakeLists.txt  Projeto-Pico-ar-condicionado.cpp
Projeto-Pico-ar-condicionado/Projeto/: iniciandoVsCode.md  ondeparei.md
Projeto-Pico-ar-condicionado/Projeto/Embarcado/UART/: CMakeLists.txt  CMakeLists.txt.save  UART_pico.cpp  uart_raspberry.cpp  uart_test1.cpp
Projeto-Pico-ar-condicionado/Projeto_2/PC/: CMakeLists.txt  Calendar.cpp  List.cpp  List.h  List_PC.cpp  Node.cpp  Node.h  Node_PC.cpp  Node_base.cpp
Projeto-Pico-ar-condicionado/Projeto_2/PC/UART/: UART_ubuntu.cpp
Projeto-Pico-ar-condicionado/Projeto_entrega4/: ondeparei.md
Projeto/Embarcado/: List.cpp  Node.cpp
Projeto/outros_codigos/: Uart.cpp  UartLinux.cpp
Projeto/outros_codigos/Raspberry pico/: ClockCalendar.cpp  Nodo.h  Teste_Lista.cpp
Trabalho/: Calendar.h  Clock.cpp  ClockCalendar.cpp  Pressao.cpp  Pressao.h  cadastro_Pressao.cpp  cadastro_Pressao.h  cadastro_Temperatura.cpp  cadastro_Temperatura.h  class_Sensor.cpp  main_sensores.cpp
exercicios/Aula 1/: questao_2.cpp  questao_6_a.cpp
exercicios/Aula 4/: ClockCalendar.h
exercicios/Aula 5/: Aluno.cpp  Aluno.h  Vetor.cpp
exercicios/Prontos/: CShape3d.cpp
exercicios/Trabalho/: Calendar.cpp  Pressao.cpp  Pressao.h  Sensor.cpp  Temperatura.cpp  Temperatura.h  cadastro_Temperatura.cpp  class_Sensor.cpp  main_ClockCalendar.cpp  main_sensores.cpp  teste_Calendar.cpp
(+130 files in other folders)
